# ai-lab-selection

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
answers/supervised-learning/: decision-tree.md  knn.md  logistic-regression.md  modeling.md  naive-bayes.md  random-forest.md  svm.md
answers/unsupervised-learning/: dbscan.md  kmeans.md  pca.md
dataset/: sample_submission.csv
scripts/: run_ruff.py
src/: base_estimator.py  doe.ipynb
src/supervised_learning/: __init__.py
src/supervised_learning/ann/: __init__.py  ann.py  classifier.py
src/supervised_learning/classifier/: __init__.py  classifier.py  decision_tree.py  knn.py  lr.py  naive_bayes.py  random_forest.py  svm.py
src/unsupervised_learning/: __init__.py  clustermixin.py  dbscan.py  kmeans.py  pca.py
